--- a/web_site/templates/twitter_app/base.html
+++ b/web_site/templates/twitter_app/base.html
@@ -51,7 +51,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="navbar-brand" href="{% url 'twitter_app:map' %}">Map</a>
+                    <a class="navbar-brand" href="{% url 'twitter_app:hash_tag' %}">Hash Tag Order</a>
                 </li>
 
             </ul>
