--- a/web_site/templates/twitter_app/base.html
+++ b/web_site/templates/twitter_app/base.html
@@ -11,7 +11,7 @@
     <!-- font -->
     <link href="https://fonts.googleapis.com/css?family=Gugi" rel="stylesheet">
     {#    style script#}
-    <link rel="stylesheet" type="text/css" href="{% static "css/twe_style.css" %}">
+    <link rel="stylesheet" type="text/css" href="{% static "css/tweet_style.css" %}">
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
