--- a/web_site/twitter_app/static/css/tweet_style.css
+++ b/web_site/twitter_app/static/css/tweet_style.css
@@ -53,7 +53,7 @@ body {
 #welcome_content {
     padding-top: 10%;
     text-align: center;
-	color: whitesmoke;
+	color: black;
 }
 .box {
 	display: flex;
