--- a/web_site/twitter_app/templates/twitter_app/avg_length_order.html
+++ b/web_site/twitter_app/templates/twitter_app/avg_length_order.html
@@ -6,6 +6,7 @@
 {% block body_block %}
 
 <div id="container" >
+        <script type="text/javascript" src="{% static 'js/echarts.js' %}"></script>
 
 
         <script type="text/javascript">
