--- a/web_site/twitter_app/templates/twitter_app/total_income_map.html
+++ b/web_site/twitter_app/templates/twitter_app/total_income_map.html
@@ -2,7 +2,8 @@
 {% load staticfiles %}
 <html>
   <head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+{#    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>#}
+    <script src='{% static 'js/jquery.min.js' %}'></script>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no" />
     <title>Mashups with google.maps.Data</title>
