--- a/web_site/twitter_app/templates/twitter_app/team.html
+++ b/web_site/twitter_app/templates/twitter_app/team.html
@@ -5,11 +5,26 @@
         <div class="container" id="main_window">
             <h3>- Team -</h3>
             <div>
-                <span>Huorui Qiang</span>
+                <span>Ruixi Huo 815821</span>
             </div>
+            <hr>
             <div>
-                <span>Qiang RuiHuo</span>
+                <span>Yunjie Jia 864538</span>
             </div>
+            <hr>
+            <div>
+                <span>Yi Song 827781</span>
+            </div>
+            <hr>
+            <div>
+                <span>Chong Liu 796337</span>
+            </div>
+            <hr>
+            <div>
+                <span>Xiaoting Huang 786408</span>
+            </div>
+
+
         </div>
 
     {% endblock %}
